<resources>
    <string name="app_name">Abakar_flow</string>
    <string name="create_user">Создать пользователя</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_name">Имя</string>
    <string name="edit_name">Введите имя</string>
    <string name="text_age">Возраст</string>
    <string name="edit_age">Введите возраст</string>
    <string name="text_adress">Адрес</string>
    <string name="edit_adress">Введите адрес</string>
    <string name="text_email">e-mail</string>
    <string name="edit_email">Введите e-mail</string>
</resources>